[project]
name = "jinja-tests"
version = "0.1.0"
description = "Jinja template engine tests"
authors = [
    {name = "João Otávio", email = "joaotavioos@outlook.com"},
]
dependencies = [
    "Jinja2>=3.1.3",
    "pdfkit>=1.0.0",
    "pyodbc>=5.0.1",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.0.4",
    "pylint>=3.0.3",
]

[tool.pdm.scripts]
runApp = "python ./src/jinja_tests/com_pdf_tests.py"
pep8 = "autopep8 --in-place --recursive ./src"
pylint = "pylint ./src"
runTest = "python ./src/jinja_tests/{args}_test.py"